Basics of the homepage finished

--- a/index.html
+++ b/index.html
@@ -9,9 +9,130 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
-    <title>Index</title>
+    <title>Website Development by Unleashed Media Inc</title>
   </head>
   <body class="container">
-    <h1>Unleashed Media</h1>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <!-- <div class="container"> -->
+      <a class="navbar-brand" href="index.html">Unleashed Media</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavDropdown"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div
+        class="collapse navbar-collapse justify-content-end"
+        id="navbarNavDropdown"
+      >
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">company</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">solutions</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">portfolio</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdownMenuLink"
+              role="button"
+              data-bs-toggle="dropdown"
+            >
+              more
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">contact us</a></li>
+              <li><a class="dropdown-item" href="#">site map</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <!-- </div> -->
+    </nav>
+
+    <img
+      src="/assets/unleashed-bar-upscale.png"
+      class="img-fluid"
+      alt="Unleashed bar"
+    />
+
+    <div class="row align-items-stretch">
+      <div class="col-md-4">
+        <div class="card border-light">
+          <div class="card-body">
+            <h5 class="card-title">Media Center</h5>
+            <hr />
+            <p class="card-text">
+              <small class="text-muted">October 2, 2002</small>
+            </p>
+            <img
+              class="img-thumbnail border-dark"
+              src="/assets/sacred-heart-upscale.png"
+              alt="Sacred Heart Redesign"
+            />
+            <p class="card-text">
+              "It was a pleasure to work with Unleashed Media in developing the
+              website for Sacred Heart Community Service. They were
+              professional, responsive and genuinely interested in our mission.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card border-light">
+          <div class="card-body">
+            <h5 class="card-title">Spotlight</h5>
+            <hr />
+            <p class="card-text">
+              <small class="text-muted">September 14, 2002</small>
+            </p>
+            <p class="card-text">
+              <strong>2 Wire</strong>, a pioneer in broadband networking,
+              successfully increase their support with an online installation
+              presentation developed by
+              <strong>Unleashed Media</strong>
+            </p>
+            <img
+              class="img-thumbnail border-dark mb-1"
+              src="/assets/2wire-upscale.png"
+              alt="2Wire Router"
+            />
+            <br />
+            <a href="#" class="btn btn-primary">>> click here</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card border-light">
+          <div class="card-body">
+            <h5 class="card-title">Welcome to Unleashed Media&trade;</h5>
+            <hr />
+            <p class="card-text">
+              <strong>Unleashed Media&trade;</strong> creates extraordinary
+              results for our clients by providing a superior level of expertise
+              for web development, custom application development, Database
+              Development, web maintenance, multimedia and creative services.
+              Our team is committed to expanding our clients' business
+              capabilities by becoming a trusted partner for digital strategy,
+              creative, and technology services. From start to finish, we;
+            </p>
+            <ul class="fst-italic">
+              <li>Assess your specific needs</li>
+              <li>Develop creative solutions</li>
+              <li>Design effective interactive media</li>
+              <li>Verify performance</li>
+              <li>Deliver results</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
